tests/files/type_checker_tests/should_pass/050.cmdr
//Test that ternary operations type check
x = if true then true else false;
