tests/files/type_checker_tests/should_fail/092.cmdr
//Should fail if ternary condition is not a bool
x = if "hi" then true else false;
